# polygon_io

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: client.rs  helpers.rs  lib.rs
src/core/: aggs.rs  grouped.rs  last.rs  mod.rs
src/equities/: aggs.rs  grouped.rs  mod.rs  nbbo.rs  trades.rs
src/marketstatus/: mod.rs  now.rs  upcoming.rs
src/reference/: dividends.rs  financials.rs  locales.rs  markets.rs  mod.rs  splits.rs  ticker_details.rs  tickers.rs  types.rs
